static/css/base.css
html {
    min-height: 100%;
 }
 
 body {
     background-color: white;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #000;
     font-family: 'Montserrat';
 }

 .card-img-top {
     height: 200px;
     width: auto;
     object-fit: cover;
     margin-top: 5px;
 }
 
 .card-img-detail {
     height: 400px;
     width: auto;
     object-fit: cover;
     margin-top: 5px;
 }

 #home-content {
    margin-left: 50px;
}

.movie_title {
    text-decoration: none;
    color: black;
    font-size: 20px;
    margin-top: 20px;
}

.movie_title  a, a:hover, a:focus, a:active {
    text-decoration: none;
    color: inherit;
}

 #movie-detail-title{
     font-size: 18pt;
     font-weight: bold;
 }
 
 
 #review_p {
     font-size: 12pt;
 }
 
 
 .footer {
     color: black;
     text-align: center;
     left: 0;
     bottom: 0;
     width: 100%;
   }

form {
    margin-left: 2.5rem;
}
 
 
 #explanation {
     font-size: 0.2pt;
 }

.nav-mobile-font {
    text-align: center;
    font-size: 40px;
}
 
 
 /* from Bulma */
 .icon {
     align-items: center;
     display: inline-flex;
     justify-content: center;
     height: 1.5rem;
     width: 1.5rem;
 }
 .logo-font {
     text-transform: uppercase;
 }
 
 .main-logo-link {
     width: fit-content;
 }
 
 .btn-black {
     background: black;
     color: white;
 }
 
 .btn-outline-black {
     background: white;
     color: black !important; /* use important to override link colors for <a> elements */
     border: 1px solid black;
 }
 
 .btn-outline-black:hover,
 .btn-outline-black:active,
 .btn-outline-black:focus {
     background: black;
     color: white !important;
 }
 

 .btn-black:hover,
 .btn-black:active,
 .btn-black:focus {
     background: #F8F9FA;
     color: white;
 }
 
 .text-black {
     color: #000 !important;
 }
 
 .border-black {
     border: 1px solid black !important;
 }
 
 .bg-black {
     background: #000 !important;
 }
 
 
 .btt-button {
     height: 42px;
     width: 42px;
     position: fixed;
     bottom: 10px;
     right: 10px;
 }
 
 .btt-link,
 .update-link,
 .remove-item {
     cursor: pointer;
 }
 
 .review-box{
     
     border: none;
 }
 
 #thumbs_up_down {
    display: inline-block;
 }
 

 .message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

 /* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
 .arrow-up {
     width: 0; 
     height: 0; 
     border-left: 4px solid transparent;
     border-right: 4px solid transparent; 
     border-bottom: 10px solid black;
     position: absolute;
     top: -10px;
     right: 36px;
 }
 
 /* Convenience classes - colors copied from Bootstrap */
 .arrow-primary {
     border-bottom-color: #007bff !important;
 }
 
 .arrow-secondary {
     border-bottom-color: #6c757d !important;
 }
 
 .arrow-success {
     border-bottom-color: #28a745 !important;
 }
 
 .arrow-danger {
     border-bottom-color: #dc3545 !important;
 }
 
 .arrow-warning {
     border-bottom-color: #ffc107 !important;
 }
 
 .arrow-info {
     border-bottom-color: #17a2b8 !important;
 }
 
 .arrow-light {
     border-bottom-color: #f8f9fa !important;
 }
 
 .arrow-dark {
     border-bottom-color: #343a40 !important;
 }

 
 /* Movie Form */
 
 .btn-file {
     position: relative;
     overflow: hidden;
 }
 
 .btn-file input[type="file"] {
     position: absolute;
     top: 0;
     right: 0;
     min-width: 100%;
     min-height: 100%;
     opacity: 0;
     cursor: pointer;
 }
 
 .custom-checkbox .custom-control-label::before {
     border-radius: 0;
     border-color: #dc3545;
 }
 
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
     background-color: #dc3545;
     border-radius: 0;
 }
 
 /* -------------------------------- Media Queries */
 /* fixed top navbar only on medium and up */
 @media (min-width: 1200px) {
     .fixed-top-desktop-only {
         position: fixed;
         top: 0;
         right: 0;
         left: 0;
         z-index: 1030;
     }
 
     .header-container {
         padding-top: 10px;
     }
 }
 
 /* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
         padding-top: 60px;
     }
 
     body {
         height: calc(100vh - 116px);
     }

    #home-content {
        margin-left: 17px;
        text-align: center;
    }
 
     .display-4.logo-font.text-black {
         font-size: 1rem;
     }
 
     .nav-link {
         padding: 0.15rem;
     }
 
     .nav-link i.fa-lg {
         font-size: 1rem;
     }
 
     .navbar-toggler {
         padding: .6rem .6rem;
         font-size: 1rem;
     }
 
     .btn.btn-outline-black.rounded-0,
     .btn.btn-black.rounded-0 {
         padding: .375rem .375rem;
     }
 
     .btn.btn-outline-black.rounded-0.btn-lg,
     .btn.btn-black.rounded-0.btn-lg {
         padding: .375rem .375rem;
         font-size: .75rem;
     }
 
     .increment-qty, .decrement-qty {
         padding: .25rem .5rem !important;
     }
 
 }

